<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivitiesAndViews.SettingsActivity">

    <LinearLayout
        android:id="@+id/menubar_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/button_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/font_awesome"
            android:gravity="right|center"
            android:onClick="goBackToList"
            android:padding="5dp"
            android:text="@string/ic_list"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="5dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/button_help"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/font_awesome"
            android:gravity="right|center"
            android:onClick="showHelp"
            android:padding="5dp"
            android:text="@string/ic_help"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/login" />

        <Button
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="logout"
            android:text="@string/logout"
            android:visibility="gone" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/webaddress_change"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/text_serverAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:ems="10"
            android:hint="@string/webaddress"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updateServerAddress"
            android:text="@string/update" />

        <TextView
            android:id="@+id/text_loading2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/loading_circle"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>