<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivitiesAndViews.ListActivity">

    <LinearLayout
        android:id="@+id/menubar_list"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/font_awesome"
            android:gravity="right|center"
            android:onClick="reloadList"
            android:padding="5dp"
            android:text="@string/ic_refresh2"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="5dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/font_awesome"
            android:gravity="right|center"
            android:onClick="startSettingsActivity"
            android:padding="5dp"
            android:text="@string/ic_settings"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/text_loading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/loading_circle"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_owned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:text="@string/ownedComps"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_owned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/text_viewable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:text="@string/viewableComps"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_viewable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/text_public"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:text="@string/publicComps"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_public"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_lastupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastupdate" />


</LinearLayout>